--- a/package.json
+++ b/package.json
@@ -32,5 +32,9 @@
     "jimp": "^0.16.1",
     "lodash": "^4.17.15",
     "rimraf": "^3.0.2"
+  },
+  "engines" : { 
+    "npm" : ">=6.0.0",
+    "node" : ">=12.0.0"
   }
 }
