--- a/package.json
+++ b/package.json
@@ -28,13 +28,14 @@
     "typescript": "^3.5.3"
   },
   "dependencies": {
+    "axios": "^0.26.1",
     "express": "^4.17.1",
     "jimp": "^0.16.1",
     "lodash": "^4.17.15",
     "rimraf": "^3.0.2"
   },
-  "engines" : { 
-    "npm" : ">=6.0.0",
-    "node" : ">=12.0.0"
+  "engines": {
+    "npm": ">=6.0.0",
+    "node": ">=12.0.0"
   }
 }
